Bug 166801 - plasma crash on Lock Widgets
Summary: plasma crash on Lock Widgets
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 166928 167202 167357 168502 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-17 07:36 UTC by miki
Modified: 2008-08-27 21:20 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description miki 2008-07-17 07:36:40 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Application: Plasma Workspace (plasma), signal SIGSEGV
[Current thread is 0 (LWP 6286)]

Thread 4 (Thread 0xb2b1ab90 (LWP 6290)):
#0  0xb7f3b410 in __kernel_vsyscall ()
#1  0xb678daa5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb67f3146 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3  0xb2dfffcf in RenderThread::run (this=0x813c918) at /home/mi/kde/src/KDE/kdebase/workspace/plasma/containments/desktop/renderthread.cpp:84
#4  0xb67f2612 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb67894fb in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#6  0xb583be5e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 3 (Thread 0xb1c61b90 (LWP 6294)):
#0  0xb7f3b410 in __kernel_vsyscall ()
#1  0xb678daa5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb67f3146 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3  0xb66d523d in ?? () from /usr/lib/libQtNetwork.so.4
#4  0xb67f2612 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb67894fb in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#6  0xb583be5e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xb142cb90 (LWP 6357)):
#0  0xb7f3b410 in __kernel_vsyscall ()
#1  0xb5834881 in select () from /lib/tls/i686/cmov/libc.so.6
#2  0xb68bd0e7 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb67f2612 in ?? () from /usr/lib/libQtCore.so.4
#4  0xb67894fb in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#5  0xb583be5e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb4627740 (LWP 6286)):
[KCrash Handler]
#6  0xb68de168 in QCoreApplication::postEvent () from /usr/lib/libQtCore.so.4
#7  0xb68de43c in QCoreApplication::postEvent () from /usr/lib/libQtCore.so.4
#8  0xb68ec377 in QObject::deleteLater () from /usr/lib/libQtCore.so.4
#9  0xb7e2007b in Plasma::ContainmentPrivate::toggleDesktopImmutability (this=0x80ecd28) at /home/mi/kde/src/KDE/kdebase/workspace/libs/plasma/containment.cpp:1082
#10 0xb7e203b1 in Plasma::Containment::qt_metacall (this=0x813c888, _c=QMetaObject::InvokeMetaMethod, _id=21, _a=0xbf8c4f9c)
    at /home/mi/kde/build/KDE/kdebase/workspace/libs/plasma/containment.moc:130
#11 0xb2def2a4 in DefaultDesktop::qt_metacall (this=0x813c888, _c=QMetaObject::InvokeMetaMethod, _id=43, _a=0xbf8c4f9c)
    at /home/mi/kde/build/KDE/kdebase/workspace/plasma/containments/desktop/desktop.moc:75
#12 0xb68f24f9 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#13 0xb68f2930 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#14 0xb5c4add1 in QAction::triggered () from /usr/lib/libQtGui.so.4
#15 0xb5c4b79f in QAction::activate () from /usr/lib/libQtGui.so.4
#16 0xb6026ed1 in ?? () from /usr/lib/libQtGui.so.4
#17 0xb6029734 in QMenu::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#18 0xb79d0694 in KMenu::mouseReleaseEvent (this=0xbf8c5e88, e=0xbf8c56cc) at /home/mi/kde/src/KDE/kdelibs/kdeui/widgets/kmenu.cpp:452
#19 0xb5ca94a4 in QWidget::event () from /usr/lib/libQtGui.so.4
#20 0xb6024845 in QMenu::event () from /usr/lib/libQtGui.so.4
#21 0xb5c51c0c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#22 0xb5c56cd5 in QApplication::notify () from /usr/lib/libQtGui.so.4
#23 0xb79097bd in KApplication::notify (this=0x8078a38, receiver=0xbf8c5e88, event=0xbf8c56cc) at /home/mi/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#24 0xb68dd6a9 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#25 0xb5c53e21 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#26 0xb5cbdf0c in ?? () from /usr/lib/libQtGui.so.4
#27 0xb5cbc6b1 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#28 0xb5ce53ba in ?? () from /usr/lib/libQtGui.so.4
#29 0xb5554dd6 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#30 0xb5558193 in ?? () from /usr/lib/libglib-2.0.so.0
#31 0xb555874e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#32 0xb6908f98 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#33 0xb5ce51b5 in ?? () from /usr/lib/libQtGui.so.4
#34 0xb68dc92d in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#35 0xb68dcabd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#36 0xb60299b7 in QMenu::exec () from /usr/lib/libQtGui.so.4
#37 0xb7e1e8e6 in Plasma::Containment::contextMenuEvent (this=0x813c888, event=0xbf8c645c) at /home/mi/kde/src/KDE/kdebase/workspace/libs/plasma/containment.cpp:450
#38 0xb61c1049 in QGraphicsItem::sceneEvent () from /usr/lib/libQtGui.so.4
#39 0xb620332c in QGraphicsWidget::sceneEvent () from /usr/lib/libQtGui.so.4
#40 0xb7df2f8f in Plasma::Applet::sceneEvent (this=0x813c888, event=0xbf8c645c) at /home/mi/kde/src/KDE/kdebase/workspace/libs/plasma/applet.cpp:1425
#41 0xb61da3cc in ?? () from /usr/lib/libQtGui.so.4
#42 0xb61e67e5 in QGraphicsScene::contextMenuEvent () from /usr/lib/libQtGui.so.4
#43 0xb61e75c6 in QGraphicsScene::event () from /usr/lib/libQtGui.so.4
#44 0xb5c51c0c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#45 0xb5c567a9 in QApplication::notify () from /usr/lib/libQtGui.so.4
#46 0xb79097bd in KApplication::notify (this=0x8078a38, receiver=0x80bfd08, event=0xbf8c645c) at /home/mi/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#47 0xb68dd6a9 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#48 0xb61f7710 in QGraphicsView::contextMenuEvent () from /usr/lib/libQtGui.so.4
#49 0xb5ca99b0 in QWidget::event () from /usr/lib/libQtGui.so.4
#50 0xb5fde063 in QFrame::event () from /usr/lib/libQtGui.so.4
#51 0xb6071c0f in QAbstractScrollArea::viewportEvent () from /usr/lib/libQtGui.so.4
#52 0xb61f77cf in QGraphicsView::viewportEvent () from /usr/lib/libQtGui.so.4
#53 0xb6072f95 in ?? () from /usr/lib/libQtGui.so.4
#54 0xb68dda21 in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#55 0xb5c51be3 in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#56 0xb5c5700e in QApplication::notify () from /usr/lib/libQtGui.so.4
#57 0xb79097bd in KApplication::notify (this=0x8078a38, receiver=0x81a0370, event=0xbf8c6a24) at /home/mi/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#58 0xb68dd6a9 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#59 0xb5cbe448 in ?? () from /usr/lib/libQtGui.so.4
#60 0xb5cbc6b1 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#61 0xb5ce53ba in ?? () from /usr/lib/libQtGui.so.4
#62 0xb5554dd6 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#63 0xb5558193 in ?? () from /usr/lib/libglib-2.0.so.0
#64 0xb555874e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#65 0xb6908f98 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#66 0xb5ce51b5 in ?? () from /usr/lib/libQtGui.so.4
#67 0xb68dc92d in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#68 0xb68dcabd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#69 0xb68ded3d in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#70 0xb5c51567 in QApplication::exec () from /usr/lib/libQtGui.so.4
#71 0xb7f1dbe9 in kdemain (argc=1, argv=0xbf8c7304) at /home/mi/kde/src/KDE/kdebase/workspace/plasma/plasma/main.cpp:54
#72 0x080487d6 in main (argc=2323328, argv=0xb69ec2b8) at /home/mi/kde/build/KDE/kdebase/workspace/plasma/plasma/plasma-qgv_dummy.cpp:3
Comment 1 Aaron J. Seigo 2008-07-18 18:13:55 UTC
*** Bug 166928 has been marked as a duplicate of this bug. ***
Comment 2 Christophe Marin 2008-07-24 22:54:05 UTC
*** Bug 167202 has been marked as a duplicate of this bug. ***
Comment 3 Christophe Marin 2008-07-24 22:54:09 UTC
*** Bug 167357 has been marked as a duplicate of this bug. ***
Comment 4 Christophe Marin 2008-08-06 17:27:01 UTC
*** Bug 168502 has been marked as a duplicate of this bug. ***
Comment 5 Alex Merry 2008-08-27 21:20:36 UTC
Fixed in r845313 (trunk) and r853477 (4.1).