Containment should delete the handle when its applet is destroyed, so that it can be removed from d->handles.

BUG: 166801


svn path=/branches/KDE/4.1/kdebase/workspace/; revision=853477