libs/plasma/applethandle.cpp
@@ -772,7 +772,6 @@ void AppletHandle::leaveTimeout()
 void AppletHandle::appletDestroyed()
 {
     m_applet = 0;
-    deleteLater();
 }
 
 void AppletHandle::appletResized()
